[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/sprites/SpaceMono-BoldItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/levelcomplete-bottom.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/frame.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/seagull.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/levelcomplete-top.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/nextLevelBtn-noborder.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/editBtn-noborder.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/levelSelect-noborder.png" type="Texture" id=8]
[ext_resource path="res://src/scenes/LevelComplete.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/roundedRectWhite.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/levelcompletefanfarev5.wav" type="AudioStream" id=11]
[ext_resource path="res://src/prefabs/ui/BouncyBtn.gd" type="Script" id=12]
[ext_resource path="res://assets/sounds/clickpopbubblev2.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 48 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 48 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 120, 48 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 1 )

[node name="LevelComplete" type="Node2D"]
script = ExtResource( 9 )
nextLevelBtn = NodePath("Buttons/HBoxContainer/nextlevel_btn")

[node name="Levelcomplete-bottom" type="Sprite" parent="."]
position = Vector2( 511, 432 )
z_index = 202
texture = ExtResource( 2 )

[node name="Levelcomplete-top" type="Sprite" parent="."]
position = Vector2( 511, 144 )
z_index = 200
texture = ExtResource( 5 )

[node name="Frame" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 288 )
texture = ExtResource( 3 )

[node name="Seagull1" type="AnimatedSprite" parent="."]
position = Vector2( 298.162, 169.457 )
rotation = -0.232157
z_index = 203
frames = SubResource( 5 )
frame = 2
playing = true
offset = Vector2( -38.6782, -24 )

[node name="Seagull2" type="AnimatedSprite" parent="."]
position = Vector2( 835, 204 )
rotation = 0.163987
z_index = 203
frames = SubResource( 5 )
frame = 2
playing = true
offset = Vector2( -38.6782, -24 )

[node name="Seagull3" type="AnimatedSprite" parent="."]
position = Vector2( 675, 152 )
rotation = 0.0889185
z_index = 203
frames = SubResource( 5 )
frame = 1
playing = true
offset = Vector2( -38.6782, -24 )

[node name="Text" type="Node2D" parent="."]
position = Vector2( -1, 238 )
z_index = 201

[node name="Label" type="Label" parent="Text"]
margin_right = 1023.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 512, 12 )
custom_fonts/font = SubResource( 6 )
text = "level complete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="underPar" type="Label" parent="Text"]
visible = false
margin_left = 318.0
margin_top = 55.0
margin_right = 704.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 13 )
text = "under par!"
align = 1

[node name="Text-Reflection" type="Node2D" parent="."]
self_modulate = Color( 0.380392, 0.482353, 0.886275, 1 )
position = Vector2( -1, 345 )
scale = Vector2( 1, -1 )
z_index = 204

[node name="Label" type="Label" parent="Text-Reflection"]
self_modulate = Color( 1, 1, 1, 0.317647 )
margin_right = 1023.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 512, 56 )
custom_fonts/font = SubResource( 6 )
text = "level complete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.00392157 )
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 608.0
texture = ExtResource( 10 )
expand = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Sound"

[node name="Buttons" type="Node2D" parent="."]
z_index = 202

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
margin_left = 1.0
margin_top = 387.0
margin_right = 1022.0
margin_bottom = 462.0
custom_constants/separation = 20
alignment = 1

[node name="nextlevel_btn" type="TextureButton" parent="Buttons/HBoxContainer"]
margin_left = 70.0
margin_right = 295.0
margin_bottom = 75.0
texture_normal = ExtResource( 6 )
script = ExtResource( 12 )

[node name="edit_btn" type="TextureButton" parent="Buttons/HBoxContainer"]
margin_left = 315.0
margin_right = 655.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 0 )
texture_normal = ExtResource( 7 )
script = ExtResource( 12 )

[node name="levelselect_btn" type="TextureButton" parent="Buttons/HBoxContainer"]
margin_left = 675.0
margin_right = 950.0
margin_bottom = 75.0
texture_normal = ExtResource( 8 )
script = ExtResource( 12 )

[node name="BtnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Sound"

[connection signal="press_anim_complete" from="Buttons/HBoxContainer/nextlevel_btn" to="." method="_on_nextlevel_btn_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/nextlevel_btn" to="." method="onBtnPressed"]
[connection signal="press_anim_complete" from="Buttons/HBoxContainer/edit_btn" to="." method="_on_edit_btn_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/edit_btn" to="." method="onBtnPressed"]
[connection signal="press_anim_complete" from="Buttons/HBoxContainer/levelselect_btn" to="." method="_on_levelselect_btn_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/levelselect_btn" to="." method="onBtnPressed"]
